--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,15 @@
     "**/.vscode/**"
   ],
   "C_Cpp_Runner.useAddressSanitizer": false,
-  "C_Cpp_Runner.showCompilationTime": false
+  "C_Cpp_Runner.showCompilationTime": false,
+  "files.associations": {
+    "iostream": "cpp"
+  },
+  "makefile.launchConfigurations": [
+    {
+      "cwd": "c:\\Users\\benji\\source\\repos\\tp-note-2023-simeon_alexandre_maxime_benjamin",
+      "binaryPath": "c:\\Users\\benji\\source\\repos\\tp-note-2023-simeon_alexandre_maxime_benjamin\\main",
+      "binaryArgs": []
+    }
+  ]
 }
