--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
       "args": [],
       "stopAtEntry": false,
       "externalConsole": true,
-      "cwd": "c:/Users/benji/source/repos/tp-note-2023-simeon_alexandre_maxime_benjamin",
-      "program": "c:/Users/benji/source/repos/tp-note-2023-simeon_alexandre_maxime_benjamin/build/Debug/outDebug",
+      "cwd": "f:/ECN/SMP/Final_TP/tp-note-2023-simeon_alexandre_maxime_benjamin",
+      "program": "f:/ECN/SMP/Final_TP/tp-note-2023-simeon_alexandre_maxime_benjamin/build/Debug/outDebug",
       "MIMode": "gdb",
       "miDebuggerPath": "gdb",
       "setupCommands": [
